[gd_scene load_steps=11 format=3 uid="uid://inventoryui"]

[ext_resource type="Script" uid="uid://bbc3lrfviygi1" path="res://scripts/InventoryUI.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://1bjiw1hoyrh2" path="res://scenes/BackgroundRenderer.tscn" id="2_bg_renderer"]
[ext_resource type="PackedScene" path="res://scenes/UI/ItemSlot.tscn" id="3_l5txx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glass_panel"]
bg_color = Color(0.04, 0.08, 0.13, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.45, 0.75, 0.65)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="TransparentStyle"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.2, 0.8, 1, 0.25)
border_width_bottom = 3
border_color = Color(0.2, 0.8, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.8, 1, 0.15)
border_width_bottom = 2
border_color = Color(0.2, 0.8, 1, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="ButtonGroup" id="ButtonGroup_tabs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_equip_panel"]
bg_color = Color(0.04, 0.05, 0.07, 0.75)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.15, 0.25, 0.4, 0.35)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cargo_panel"]
bg_color = Color(0.04, 0.05, 0.07, 0.75)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.35, 0.55, 0.35)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header_clear"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
content_margin_left = 18.0
content_margin_top = 18.0
content_margin_right = 18.0
content_margin_bottom = 18.0
bg_color = Color(0.1, 0.1, 0.15, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.5, 0.8, 0.5)

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="StageMargin" type="MarginContainer" parent="."]
z_index = -60
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0
offset_bottom = 0.0
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Stage" type="HBoxContainer" parent="StageMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="EquipColumn" type="PanelContainer" parent="StageMargin/Stage"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_equip_panel")

[node name="EquipContent" type="VBoxContainer" parent="StageMargin/Stage/EquipColumn"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="EquipHeader" type="PanelContainer" parent="StageMargin/Stage/EquipColumn/EquipContent"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_header_clear")

[node name="EquipHeaderMargin" type="MarginContainer" parent="StageMargin/Stage/EquipColumn/EquipContent/EquipHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 8

[node name="EquipHeaderLabel" type="Label" parent="StageMargin/Stage/EquipColumn/EquipContent/EquipHeader/EquipHeaderMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.9, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.65)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Equipment"

[node name="WeaponSection" type="VBoxContainer" parent="StageMargin/Stage/EquipColumn/EquipContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="WeaponHeader" type="Label" parent="StageMargin/Stage/EquipColumn/EquipContent/WeaponSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.65)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "Weapons"

[node name="WeaponContainer" type="HBoxContainer" parent="StageMargin/Stage/EquipColumn/EquipContent/WeaponSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 1

[node name="PassiveSection" type="VBoxContainer" parent="StageMargin/Stage/EquipColumn/EquipContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="PassiveHeader" type="Label" parent="StageMargin/Stage/EquipColumn/EquipContent/PassiveSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.65)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "Passives"

[node name="PassiveContainer" type="HBoxContainer" parent="StageMargin/Stage/EquipColumn/EquipContent/PassiveSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 1

[node name="ConsumableSection" type="VBoxContainer" parent="StageMargin/Stage/EquipColumn/EquipContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="ConsumableHeader" type="Label" parent="StageMargin/Stage/EquipColumn/EquipContent/ConsumableSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.65)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "Consumables"

[node name="ConsumableContainer" type="HBoxContainer" parent="StageMargin/Stage/EquipColumn/EquipContent/ConsumableSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 1

[node name="CargoColumn" type="PanelContainer" parent="StageMargin/Stage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cargo_panel")

[node name="CargoContent" type="VBoxContainer" parent="StageMargin/Stage/CargoColumn"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="CargoHeader" type="VBoxContainer" parent="StageMargin/Stage/CargoColumn/CargoContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CargoTitle" type="PanelContainer" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_header_clear")

[node name="CargoTitleMargin" type="MarginContainer" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader/CargoTitle"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 8

[node name="CargoTitleLabel" type="Label" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader/CargoTitle/CargoTitleMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.9, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.65)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Cargo"

[node name="FilterButtons" type="HBoxContainer" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="AllButton" type="Button" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader/FilterButtons"]
layout_mode = 2
custom_minimum_size = Vector2(60, 28)
theme_override_colors/font_color = Color(0.6, 0.9, 1, 1)
theme_override_font_sizes/font_size = 12
text = "All"
toggle_mode = true
button_pressed = true

[node name="WeaponButton" type="Button" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader/FilterButtons"]
layout_mode = 2
custom_minimum_size = Vector2(70, 28)
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Weapons"
toggle_mode = true

[node name="PassiveButton" type="Button" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader/FilterButtons"]
layout_mode = 2
custom_minimum_size = Vector2(65, 28)
theme_override_colors/font_color = Color(0.3, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Passives"
toggle_mode = true

[node name="ConsumableButton" type="Button" parent="StageMargin/Stage/CargoColumn/CargoContent/CargoHeader/FilterButtons"]
layout_mode = 2
custom_minimum_size = Vector2(80, 28)
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Consumables"
toggle_mode = true

[node name="ScrollContainer" type="ScrollContainer" parent="StageMargin/Stage/CargoColumn/CargoContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 1
theme_override_styles/scroll = SubResource("TransparentStyle")
theme_override_styles/scroll_focus = SubResource("TransparentStyle")

[node name="InventoryContainer" type="MarginContainer" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 12

[node name="ItemSlot" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot2" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot3" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot4" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot5" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot6" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot7" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot8" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot9" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot10" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot11" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot12" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot13" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot14" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot15" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot16" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot17" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot18" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot19" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot20" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot21" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot22" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot23" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot24" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot25" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot26" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot27" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot28" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot29" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot30" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot31" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot32" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot33" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot34" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot35" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot36" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot37" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot38" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot39" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot40" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot41" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot42" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot43" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot44" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot45" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot46" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot47" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot48" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot49" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot50" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot51" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot52" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot53" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot54" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot55" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot56" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot57" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot58" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot59" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]

[node name="ItemSlot60" parent="StageMargin/Stage/CargoColumn/CargoContent/ScrollContainer/InventoryContainer/GridContainer" instance=ExtResource("3_l5txx")]
